# unifi-declarative-network

./: .env.example  .gitignore  CONTEXT-ANCHOR.md  README.md  pyproject.toml  requirements.txt
config/: hardware.yaml  network-ports.yaml  vlans.yaml  wireless.yaml
config/firewall/: lan-in.yaml  lan-local.yaml  wan-in.yaml
docs/: 9.5.21-KNOWN-ISSUES.md  9.5.21-NOTES.md  LESSONS_LEARNED.md  MANUAL_TASKS.md  MIGRATION_GUIDE.md  ROLLBACK_PROCEDURES.md  TROUBLESHOOTING.md  acl-policies.md  hardware-constraints.md  network-isolation.md  static-reservations.md  switch-port-profiles.md  wifi-configuration.md
docs/adr/: 001-python-over-bash.md
scripts/: pre-migration-smoke-test.sh
src/unifi_declarative/: apply.py  cli.py  client.py  differ.py  logging_config.py  models.py  validate.py  validators.py
